2014-01-03  Paul Eggert  <eggert@cs.ucla.edu>

	Port to C89.
	* data.c (arithcompare_driver):
	* fileio.c (Fcar_less_than_car):
	* fns.c (internal_equal):
	* frame.c (delete_frame):
	* lisp.h (enum More_Lisp_Bits):
	* lread.c (read1):
	Avoid C99 constructs that don't work in C89.
	* data.c (ULL_MAX, count_trailing_zeros_ll): New macros,
	to port to C89, which doesn't have 'long long'.
	(count_trailing_zero_bits): Use them.

2014-01-03  Chong Yidong  <cyd@gnu.org>

	* doc.c (Fdocumentation): Remove dynamic-docstring-function.

2014-01-02  Martin Rudalics  <rudalics@gmx.at>

	Further adjust frame/window scrollbar width calculations.
	* window.c (apply_window_adjustment): Set
	windows_or_buffers_changed.
	(Fwindow_scroll_bars): Return actual scrollbar width.
	* xfns.c (x_set_scroll_bar_default_width): Rename wid to unit.
	For non-toolkit builds again use 14 as minimum width and set
	FRAME_CONFIG_SCROLL_BAR_WIDTH accordingly.
	* xterm.c (XTset_vertical_scroll_bar): Take width from
	WINDOW_SCROLL_BAR_AREA_WIDTH.
	(x_new_font): Rename wid to unit.  Base calculation of new
	scrollbar width on toolkit used and make it analogous to that of
	x_set_scroll_bar_default_width.
	* w32fns.c (x_set_scroll_bar_default_width): Rename wid to unit.
	(Fx_create_frame): Call x_set_scroll_bar_default_width instead
	of GetSystemMetrics.
	* w32term.c (w32_set_vertical_scroll_bar): Take width from
	WINDOW_SCROLL_BAR_AREA_WIDTH.
	(x_new_font): Make it correspond to changes in xterm.c.

2014-01-01  Paul Eggert  <eggert@cs.ucla.edu>

	* lisp.h (EMACS_INT): Configure based on INTPTR_MAX, not LONG_MAX.
	This is a cleaner way to fix the MinGW-w64 porting problem.
	Check for INTPTR_MAX misconfiguration.

2014-01-01  Eli Zaretskii  <eliz@gnu.org>

	* search.c (newline_cache_on_off, find_newline): In indirect
	buffers, use the newline cache of the base buffer.

	* insdel.c (invalidate_buffer_caches): If BUF is an indirect
	buffer, invalidate the caches of its base buffer.  (Bug#16265)
