@@ -1,3 +1,13 @@
+2014-01-04  Martin Rudalics  <rudalics@gmx.at>
+
+	Fix maximization behavior on Windows (Bug#16300).
+	* w32fns.c (w32_fullscreen_rect): Don't handle
+	FULLSCREEN_MAXIMIZED and FULLSCREEN_NONE specially.
+	* w32term.c (w32fullscreen_hook): Use SetWindowPlacement instead
+	of SetWindowPos.  Restore last placement also when leaving
+	FULLSCREEN_HEIGHT and FULLSCREEN_WIDTH.  Call ShowWindow in all
+	but the FULLSCREEN_BOTH case.
+
 2014-01-03  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Port to C89.
